--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
 PORT = 8000
+MONGO_URL = mongodb+srv://ananya2903:88C2y0IFcgKEoOTR@cluster0.nanaaif.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
