--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-date-picker": "^11.0.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.9"
   },
