--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-date-picker": "^11.0.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.9"
   },
