--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "moment": "^2.30.1",
